# courier-libs

./: .gitignore
cgi/: .gitignore  Makefile.am  cgi.C  cgi.c  cgi.h  cgicheckbox.c  cgicookie.C  cgicookie.c  cgidaemon.c  cgidaemond.c  cgiextrapath.c  cgihasversion.c  cgihttpscriptptr.c  cgihttpsscriptptr.c  cgiinput.c  cgimultiple.C  cginocache.c  cgiredirect.c  cgirelscriptptr.c  cgiselect.c  cgitextarea.c  cgiurlencode.C  cgiuseragent.c  cgiversion.c  configure.ac  testsuite.cpp
gpglib/: .gitignore  Makefile.am  README.html  checksign.c  configure.ac  configure.in  delete.c  export.c  fork.c  genkey.c  gpg.C  gpg.c  gpglib.h  import.c  libgpg.c  list.c  mimegpg.c  mimegpg.sgml  mimegpgfork.c  mimegpgfork.h  mimegpgheader.c  mimegpgheader.h  mimegpgstack.c  mimegpgstack.h  options.c  rfc2045.C  rfc2045.c  sign.c  tempname.c  tempname.h  testgpg.c  testsuite  webgpg.in
http11/: .gitignore  Makefile.am  configure.ac  contentlanguage.c  http11.h.in
ldapaddressbook/: .gitignore  Makefile.am  abookadd.c  abookdel.c  abookfind.c  abookread.c  abooksearch.c  configure.ac  ldapaddressbook.dist  ldapaddressbook.dist.git  ldapaddressbook.h  ldapsearch.c  libldapsearch.c  libldapsearch.h  noldapsearch.c
liblog/: Makefile.am  configure.ac  logger.c
maildir/: .gitignore  Makefile.am  README.maildirfilter.html  README.maildirquota.html  README.sharedfolders.html  autoresponse.C  autoresponse.c  autoresponse.h  configure.ac  deliverquota.c  deliverquota.sgml  loginexec.h  maildir.sgml  maildiracl.c  maildiracl.sgml  maildiraclt.c  maildiraclt.h  maildiracltcpp.C  maildircache.C  maildircache.c  maildircache.h  maildircreate.C  maildircreate.c  maildircreate.h  maildirdelfolder.c  maildirfilename.C  maildirfilename.c  maildirfilter.C  maildirfilter.c  maildirfilter.h  maildirfilter2.C  maildirfilter2.c  maildirfiltercpp.C  maildirfiltertypelist.h  maildirflags.c  maildirgetnew.c  maildirgetquota.c  maildirgetquota.h  maildirinfo.c  maildirinfo.h  (+75 more)
maildrop/: .gitignore  Makefile.am  README.html.in  alarm.C  alarm.h  alarmsleep.C  alarmsleep.h  alarmtimer.C  alarmtimer.h  buffer.C  buffer.h  configure.ac  configure.in  dbobj.h.in  deliver.C  deliverdotlock.C  deliverdotlock.h  dotlock.C  dotlock.h  dotlockmaildrop.C  dotlockrefresh.C  dotlockrefresh.h  dovecotauth.c  dovecotauth.h  exittrap.C  exittrap.h  filelock.C  filelock.h  filter.C  formatmbox.C  formatmbox.h  funcs.C  funcs.h  globaltimer.C  globaltimer.h  lexer.C  lexer.h  log.C  log.h  mailbot-old.c  (+66 more)
pcp/: .gitignore  Makefile.am  README.html  configure.ac  configure.in  pcp.C  pcp.c  pcp.h  pcpacl.c  pcpaddcommon.c  pcpd.C  pcpd.c  pcpdauth.c  pcpdauth.h  pcpdauthme.c  pcpdauthtoken.c  pcpdauthtoken.h  pcpdir.c  pcpdir.h  pcpdtimer.c  pcpdtimer.h  pcpgmtime.c  pcplocale.c  pcpmksocket.c  pcpnet.c  pcpparseymd.c  pcpretr.C  pcpretr.h  pcpretrheaders.C  uids.c
pcp/m4/: ChangeLog
pcp/po/: .gitignore  ChangeLog  Makevars  POTFILES.in  pcp.pot
rfc2045/: .gitignore  Makefile.am  base64.c  base64.h  configure.ac  encode.C  encode.h  encodeautodetect.C  makemime.C  makemime.sgml  reformime.C  reformime.c  reformime.sgml  rfc2045.c  rfc2045.h  rfc2045.sgml  rfc2045_encode.h  rfc2045_fromfd.c  rfc2045acchk.c  rfc2045acchkcpp.C  rfc2045acprep.c  rfc2045appendurl.C  rfc2045appendurl.c  rfc2045cdecode.c  rfc2045charset.h.in  rfc2045cpp.C  rfc2045cpp2.C  rfc2045cpp3.C  rfc2045decode.c  rfc2045decodemimesection.c  rfc2045decodemimesectionu.c  rfc2045defcharset.C  rfc2045defcharset.c  rfc2045defs.C  rfc2045defs.c  rfc2045find.c  rfc2045header.c  rfc2045mkboundary.c  rfc2045new_boundary.C  rfc2045reply.c  (+26 more)
rfc822/: .gitignore  ChangeLog  Makefile.am  configure.ac  encodeautodetect.C  encodeautodetect.c  imaprefs.C  imaprefs.c  imaprefs.h  imapsubj.C  imapsubj.c  reftest.C  reftest.c  reftest.txt  rfc2047.C  rfc2047.c  rfc2047.h  rfc2047u.c  rfc822.C  rfc822.c  rfc822.h  rfc822.sgml  rfc822_2047.h  rfc822_fdstreambuf.C  rfc822_getaddr.c  rfc822_getaddrs.c  rfc822_mkdate.C  rfc822_mkdate.c  rfc822_parsedt.C  rfc822_parsedt.c  rfc822cpp.C  rfc822hdr.c  rfc822hdr.h  rfc822hdrcpp.C  testsuite.c  testsuite.txt  testsuite2.C  testsuitecpp.C
sqwebmail/: .gitignore  BUGS.html  ChangeLog  Makefile.am  SECURITY.html  TODO.html  acl.C  acl.c  acl.h  addressbook.C  addressbook.c  addressbook.h  args.c  attachments.C  attachments.c  auth.C  auth.c  auth.h  autoresponse.C  autoresponse.c  autoresponse.h  buf.c  buf.h  changepw.c  cleancache.pl.in  configure.ac  filter.C  filter.c  filter.h  folder.C  folder.c  folder.h  gpg.C  gpg.c  gpg.h  html.C  html.c  html.h  ispell.C  ispell.c  (+71 more)
sqwebmail/html/: .gitignore  Makefile.am  README_LANG.html.in  configure.ac  configure.in  lstsoftlinks  mksoftlinks  rmsoftlinks
sqwebmail/html/en-us/: .gitignore  CHARSET  ISPELLDICT.in  LANGUAGE_PREF  Makefile.am  TIMEZONELIST  abooklist.html  acl.html  attachments.html  autoresponder.html  calendarlogin.inc.html  configure.ac  empty.html  eventacl.html  eventdaily.html  eventdelete.html  (+35 more)
sqwebmail/images/: .gitignore  Makefile.am  configure.ac  configure.in  sqwebmail.css  wikifmt.html
sqwebmail/selinux/: courier_webmail.pp  courier_webmail.te
threadlib/: .gitignore  Makefile.am  configure.ac  havepthread.h  nopthread.c  nopthread.h  pthread.c  test.c  testsuite  testsuite.txt  threadlib.h
unicode/: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  autobloat  bidi_brackets.h  bidi_brackets_v.h  bidi_class.h  bidi_classnames.h  bidi_mirroring.h  biditest.C  biditest2.C  book.xml  categoriestab.h  cjkcompat.pl  configure.ac  configure.in  courier-debuild.in  courier-unicode-script-tab.h  courier-unicode-version.m4.in  courier-unicode.h  courier-unicode.h.in  courier-unicode.spec.in  derivedcoreproperties.c  derivedcoreproperties.h  eastasianwidth.h  emojitab.h  enttest.c  general_categorytab.h  graphemebreaktab.h  graphemetest.c  linebreaktab.h  linebreaktab_internal.h  linebreaktest.C  mkbidi.pl  mkbidiclass.pl  mkbidiclassnames.pl  mkcanonical.pl  mkcategories.pl  (+39 more)
unicode/docbook/: book.css  docbook.xsl  frame.js
unicode/m4/: courier-unicode.m4
(+322 files in other folders)
