#
# Copyright 1998 - 2007 Double Precision, Inc.  See COPYING for
# distribution information.


noinst_LTLIBRARIES=libcgi.la

libcgi_la_SOURCES=cgi.h cgi.c cgiextrapath.c cgiselect.c cgicheckbox.c\
	cgiinput.c cgihttpscriptptr.c cgihttpsscriptptr.c cgirelscriptptr.c \
	cginocache.c cgiredirect.c cgitextarea.c cgiversion.c cgihasversion.c \
	cgicookie.c cgiuseragent.c cgidaemon.c cgidaemond.c
